tests/fixtures/invalid/divmod_dict_int.py
# Cannot call divmod() with Dict[str, int], Int
x = divmod({"a": 1}, 1)
